Bootstrap Assignment 1 Task 3

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <div class="row row-header">
                 <div class="col-12 col-sm-8">
                     <h1>Le Chocolat</h1>
-                    <p>We combine experience with creativity to create innovative tastes based on classic chocolate
+                    <p class="d-none d-md-block">We combine experience with creativity to create innovative tastes based on classic chocolate
                         recipes. Our creations will travel you in the chocolate world!</p>
                 </div>
                 <div class="col col-sm">
@@ -36,7 +36,7 @@
             </div>
             <div class="col-sm col-md">
                 <h2>85% DARK CHOCOLATE</h2>
-                <p>Dark chocolate with no added sugar. Here you can taste the flavor of cocoa beans.</p>
+                <p class="d-none d-md-block">Dark chocolate with no added sugar. Here you can taste the flavor of cocoa beans.</p>
             </div>
         </div>
 
@@ -46,10 +46,10 @@
             </div>
             <div class="col-sm-2 col-md-3">
                 <h2>Our basket</h2>
-                <p>This week we offer a basket with 10 delicious chocolates! </p>
+                <p class="d-none d-md-block">This week we offer a basket with 10 delicious chocolates! </p>
             </div>
             <div class="col-sm-6 col-md-6">
-                <p>
+                <p class="d-none d-md-block">
                     test
                 </p>
             </div>
