--- a/aboutus.html
+++ b/aboutus.html
@@ -35,7 +35,7 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-sm-6">
+            <div class="col-12 col-sm-6">
                 <h2>Our History</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus semper nunc quis maximus pharetra.
                     Quisque ut molestie ante. Donec mattis pharetra erat, eu ultricies ipsum faucibus et. Curabitur
@@ -44,7 +44,7 @@
                 <p>Nulla ultrices diam at tortor volutpat, <em>et facilisis justo facilisis</em>. Phasellus dignissim
                     euismod mi eget dignissim. Sed eget consequat urna. </p>
             </div>
-            <div>
+            <div class="col col-sm">
             </div>
         </div>
 
@@ -53,16 +53,16 @@
             <div class="col-12">
                 <h2>Corporate Leadership</h2>
                 <h3>Jim Alcon <small>Chief Executive Officer </small></h3>
-                <p>Jim Alcon is the CEO of our company. He is responsible for the policy and strategy of our company.
+                <p class="d-sm-none d-md-block">Jim Alcon is the CEO of our company. He is responsible for the policy and strategy of our company.
                 </p>
                 <h3>Bill Peterson <small>Chief Financial Officer </small></h3>
-                <p>Bill Peterson is the CFO of our company. He is responsible for all the financial decisions of our
+                <p class="d-none d-md-block">Bill Peterson is the CFO of our company. He is responsible for all the financial decisions of our
                     company. </p>
                 <h3>John Cook <small>Chef</small></h3>
-                <p>Our Chef, John Cook has specialized in the production of chocolates and he has created the receipts
+                <p class="d-none d-md-block">Our Chef, John Cook has specialized in the production of chocolates and he has created the receipts
                     for our chocolates. </p>
                 <h3>Vasilis Wilson <small>Sous-chef </small></h3>
-                <p>Vasilis Wilson is well informed of all the current trends in pastry and contributes his innovative
+                <p class="d-none d-md-block">Vasilis Wilson is well informed of all the current trends in pastry and contributes his innovative
                     ideas in our products. </p>
             </div>
         </div>
