--- a/aboutus.html
+++ b/aboutus.html
@@ -12,13 +12,30 @@
 </head>
 
 <body>
+    <nav class="navbar navbar-expand-md navbar-light bg-light fixed-top ">
+        <div class="container">
+            <a class="navbar-brand" href="./index.html">Le Chocolat</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#Navbar">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="Navbar">
+                <ul class="navbar-nav">
+                    <li class="nav-item"><a class="nav-link" href="./index.html">Home</a></li>
+                    <li class="nav-item active"><a class="nav-link" href="#">About</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#">Menu</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
+                </ul>
+            </div>
+        </div>
+    </nav>
 
     <header class="jumbotron">
         <div class="container">
             <div class="row row-header">
                 <div class="col-12 col-sm-8">
                     <h1>Le Chocolat</h1>
-                    <p>We combine experience with creativity to create innovative tastes based on classic chocolate
+                    <p class="d-none d-md-block">We combine experience with creativity to create innovative tastes based
+                        on classic chocolate
                         recipes. Our creations will travel you in the chocolate world!</p>
                 </div>
                 <div class="col col-sm">
@@ -28,6 +45,12 @@
     </header>
 
     <div class="container">
+        <nav aria-label="breadcrumb">
+            <ol class="breadcrumb">
+                <li class="breadcrumb-item"><a href="./index.html">Home</a></li>
+                <li class="breadcrumb-item active" aria-current="page">About us</li>
+            </ol>
+        </nav>
         <div class="row">
             <div class="col-12">
                 <h3>About Us</h3>
@@ -53,16 +76,20 @@
             <div class="col-12">
                 <h2>Corporate Leadership</h2>
                 <h3>Jim Alcon <small>Chief Executive Officer </small></h3>
-                <p class="d-sm-none d-md-block">Jim Alcon is the CEO of our company. He is responsible for the policy and strategy of our company.
+                <p class="d-sm-none d-md-block">Jim Alcon is the CEO of our company. He is responsible for the policy
+                    and strategy of our company.
                 </p>
                 <h3>Bill Peterson <small>Chief Financial Officer </small></h3>
-                <p class="d-none d-md-block">Bill Peterson is the CFO of our company. He is responsible for all the financial decisions of our
+                <p class="d-none d-md-block">Bill Peterson is the CFO of our company. He is responsible for all the
+                    financial decisions of our
                     company. </p>
                 <h3>John Cook <small>Chef</small></h3>
-                <p class="d-none d-md-block">Our Chef, John Cook has specialized in the production of chocolates and he has created the receipts
+                <p class="d-none d-md-block">Our Chef, John Cook has specialized in the production of chocolates and he
+                    has created the receipts
                     for our chocolates. </p>
                 <h3>Vasilis Wilson <small>Sous-chef </small></h3>
-                <p class="d-none d-md-block">Vasilis Wilson is well informed of all the current trends in pastry and contributes his innovative
+                <p class="d-none d-md-block">Vasilis Wilson is well informed of all the current trends in pastry and
+                    contributes his innovative
                     ideas in our products. </p>
             </div>
         </div>
