--- a/index.html
+++ b/index.html
@@ -13,30 +13,54 @@
 </head>
 
 <body>
+    <nav class="navbar navbar-expand-md navbar-light bg-light fixed-top ">
+        <div class="container">
+            <a class="navbar-brand" href="#">Le Chocolat</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#Navbar">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="Navbar">
+            <ul class="navbar-nav">
+                <li class="nav-item active"><a class="nav-link" href="#">Home</a></li>
+                <li class="nav-item"><a class="nav-link" href="./aboutus.html">About</a></li>
+                <li class="nav-item"><a class="nav-link" href="#">Menu</a></li>
+                <li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
+            </ul>
+        </div>
+        </div>
+    </nav>
 
     <header class="jumbotron">
         <div class="container">
             <div class="row row-header">
                 <div class="col-12 col-sm-8">
                     <h1>Le Chocolat</h1>
-                    <p class="d-none d-md-block">We combine experience with creativity to create innovative tastes based on classic chocolate
+                    <p class="d-none d-md-block">We combine experience with creativity to create innovative tastes based
+                        on classic chocolate
                         recipes. Our creations will travel you in the chocolate world!</p>
                 </div>
                 <div class="col col-sm">
-                    
+
                 </div>
             </div>
         </div>
     </header>
 
     <div class="container">
+            <nav aria-label="breadcrumb">
+                    <ol class="breadcrumb">
+                      <li class="breadcrumb-item active" aria-current="page">Home</li>
+                      <li class="breadcrumb-item"><a href="./aboutus.html">About us</a></li>
+                    </ol>
+                  </nav>
         <div class="row flex-row-reverse row-content align-items-center">
             <div class="col-sm-4 col-md-3">
                 <h3>Our famous chocolates</h3>
             </div>
             <div class="col-sm col-md">
                 <h2>85% DARK CHOCOLATE</h2>
-                <p class="d-none d-md-block">Dark chocolate with no added sugar. Here you can taste the flavor of cocoa beans.</p>
+                <p class="d-none d-md-block">Dark chocolate with no added sugar. Here you can taste the flavor of cocoa
+                    beans.</p>
             </div>
         </div>
 
