--- a/aboutus.html
+++ b/aboutus.html
@@ -9,21 +9,51 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/mystyles.css">
+    <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css">
+    <style>
+        a:link {
+            text-decoration: none;
+            color: grey;
+        }
+
+        a:visited {
+            text-decoration: none;
+            color: blue;
+        }
+
+        a:hover {
+            text-decoration: underline;
+            color: green;
+        }
+
+        a:active {
+            text-decoration: none;
+            color: green;
+        }
+    </style>
 </head>
 
 <body>
     <nav class="navbar navbar-expand-md navbar-light bg-light fixed-top ">
         <div class="container">
-            <a class="navbar-brand" href="./index.html">Le Chocolat</a>
+            <a class="navbar-brand" href="./index.html"><img src="images/logo.png" title="le Chocolate" alt="le Chocolate logo" height="40 px"></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#Navbar">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="Navbar">
-                <ul class="navbar-nav">
-                    <li class="nav-item"><a class="nav-link" href="./index.html">Home</a></li>
-                    <li class="nav-item active"><a class="nav-link" href="#">About</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">Menu</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item active">
+                        <a class="nav-link" href="./index.html"><span class="fa fa-home fa-lg"></span> Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#"><span class="fa fa-info fa-lg"></span> About</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#"><span class="fa fa-list fa-lg"></span> Menu</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#"><span class="fa fa-address-card fa-lg"></span> Contact</a>
+                    </li>
                 </ul>
             </div>
         </div>
@@ -39,25 +69,27 @@
                         recipes. Our creations will travel you in the chocolate world!</p>
                 </div>
                 <div class="col col-sm">
+                    <img src="/images/logo.png" class="img-fluid">
                 </div>
             </div>
         </div>
     </header>
-
+    <nav aria-label="breadcrumb">
+        <ol class="breadcrumb" style="padding:10px 0px 10px 120px">
+            <li class="breadcrumb-item"><a href="./index.html">Home</a></li>
+            <li class="breadcrumb-item active" aria-current="page">About us</li>
+        </ol>
+    </nav>
     <div class="container">
-        <nav aria-label="breadcrumb">
-            <ol class="breadcrumb">
-                <li class="breadcrumb-item"><a href="./index.html">Home</a></li>
-                <li class="breadcrumb-item active" aria-current="page">About us</li>
-            </ol>
-        </nav>
-        <div class="row">
+
+        <div class="row row-content">
             <div class="col-12">
                 <h3>About Us</h3>
                 <hr>
             </div>
         </div>
-        <div class="row">
+
+        <div class="row row-content">
             <div class="col-12 col-sm-6">
                 <h2>Our History</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus semper nunc quis maximus pharetra.
@@ -68,11 +100,25 @@
                     euismod mi eget dignissim. Sed eget consequat urna. </p>
             </div>
             <div class="col col-sm">
+                <div class="card">
+                    <h3 class="card-header bg-secondary text-white">Facts At a Glance</h3>
+                    <div class="card-body">
+                        <dl class="row">
+                            <dt class="col-6">Started</dt>
+                            <dd class="col-6">3 Feb. 2013</dd>
+                            <dt class="col-6">Major Stake Holder</dt>
+                            <dd class="col-6">HW Fine Sweets Inc.</dd>
+                            <dt class="col-6">Last Year's Turnover</dt>
+                            <dd class="col-6">$250,000</dd>
+                            <dt class="col-6">Employees</dt>
+                            <dd class="col-6">10</dd>
+                        </dl>
+                    </div>
+                </div>
             </div>
         </div>
 
-
-        <div class="row">
+        <div class="row row-content">
             <div class="col-12">
                 <h2>Corporate Leadership</h2>
                 <h3>Jim Alcon <small>Chief Executive Officer </small></h3>
@@ -91,6 +137,43 @@
                 <p class="d-none d-md-block">Vasilis Wilson is well informed of all the current trends in pastry and
                     contributes his innovative
                     ideas in our products. </p>
+            </div>
+        </div>
+
+        <div class="row row-content">
+            <div class="col-12 col-sm-9">
+                <h2> Create your milk chocolate!</h2>
+                <div>
+                    <table class="table table-hover">
+                        <caption>This recipe makes a bar of about 100g.</caption>
+                        <thead class="thead-dark">
+                            <tr>
+                                <th>Igredients</th>
+                                <th>Quantity</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>Cocoa butter</td>
+                                <td>50 g</td>
+                            </tr>
+                            <tr>
+                                <td>Icing sugar</td>
+                                <td>50 g</td>
+                            </tr>
+                            <tr>
+                                <td>Milk powder (Full fat)</td>
+                                <td>25 g</td>
+                            </tr>
+                            <tr>
+                                <td>Cocoa powder (Unsweetended)</td>
+                                <td>13 g</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+            <div class="col-12 col-sm-3">
             </div>
         </div>
 
@@ -114,25 +197,32 @@
                         121, Clear Wave Road<br>
                         Clear Wave Road, Aloha<br>
                         HAWAII<br>
-                        Tel.: +987 6543 2100<br>
-                        Fax: +987 6543 2101<br>
-                        Email: <a href="mailto:chocolat@nomail.net">chocolat@nomail.net</a>
+                        <i class="fa fa-phone fa-lg"></i> +987 6543 2100 <br>
+                        <i class="fa fa-fax fa-lg"></i> +987 6543 2101 <br>
+                        <i class="fa fa-envelope fa-lg"></i> <a href="mailto: chocolat@nomail.net"> chocolat@nomail.net
+                        </a>
                     </address>
                 </div>
                 <div class="col-sm align-self-center">
                     <div style="text-align:center">
-                        <a href="http://google.com/+">Google+</a>
-                        <a href="http://www.facebook.com/profile.php?id=">Facebook</a>
-                        <a href="http://www.linkedin.com/in/">LinkedIn</a>
-                        <a href="http://twitter.com/">Twitter</a>
-                        <a href="http://youtube.com/">YouTube</a>
-                        <a href="mailto:">Mail</a>
+                        <a class="btn btn-social-icon btn-google-plus" href="http://google.com/+">
+                            <i class="fa fa-google-plus"></i></a>
+                        <a class="btn btn-social-icon btn-facebook" href="http://www.facebook.com/profile.php?id=">
+                            <i class="fa fa-facebook"></i></a>
+                        <a class="btn btn-social-icon btn-linkedin" href="http://www.linkedin.com/in/">
+                            <i class="fa fa-linkedin"></i></a>
+                        <a class="btn btn-social-icon btn-twitter" href="http://twitter.com/">
+                            <i class="fa fa-twitter"></i></a>
+                        <a class="btn btn-social-icon btn-youtube" href="http://youtube.com/">
+                            <i class="fa fa-youtube"></i></a>
+                        <a class="btn btn-social-icon" href="mailto:">
+                            <i class="fa fa-envelope-o"></i></a>
                     </div>
                 </div>
             </div>
             <div class="row justify-content-center">
                 <div class="col-auto">
-                    <p>&copy; Copyright 2018 Le Chocolat</p>
+                    <p>&copy; Copyright 2020 Le Chocolat</p>
                 </div>
             </div>
         </div>
