--- a/index.html
+++ b/index.html
@@ -10,23 +10,55 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/mystyles.css">
+    <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css">
+    <style>
+        a:link {
+            text-decoration: none;
+            color: grey;
+        }
+
+        a:visited {
+            text-decoration: none;
+            color: blue;
+        }
+
+        a:hover {
+            text-decoration: underline;
+            color: green;
+        }
+
+        a:active {
+            text-decoration: none;
+            color: green;
+        }
+    </style>
 </head>
 
 <body>
     <nav class="navbar navbar-expand-md navbar-light bg-light fixed-top ">
         <div class="container">
-            <a class="navbar-brand" href="#">Le Chocolat</a>
+            <a class="navbar-brand" href="#"><img src="images/logo.png" title="le Chocolate" alt="le Chocolate logo"
+                    height="40 px"></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#Navbar">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="Navbar">
-            <ul class="navbar-nav">
-                <li class="nav-item active"><a class="nav-link" href="#">Home</a></li>
-                <li class="nav-item"><a class="nav-link" href="./aboutus.html">About</a></li>
-                <li class="nav-item"><a class="nav-link" href="#">Menu</a></li>
-                <li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
-            </ul>
-        </div>
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item active">
+                        <a class="nav-link" href="#"><span class="fa fa-home fa-lg"></span> Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./aboutus.html"><span class="fa fa-info fa-lg"></span> About</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#"><span class="fa fa-list fa-lg"></span> Menu</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#"><span class="fa fa-address-card fa-lg"></span> Contact</a>
+                    </li>
+
+                </ul>
+            </div>
         </div>
     </nav>
 
@@ -40,54 +72,65 @@
                         recipes. Our creations will travel you in the chocolate world!</p>
                 </div>
                 <div class="col col-sm">
-
+                    <img src="/images/logo.png" class="img-fluid" title="le Chocolate" alt="le Chocolate logo">
                 </div>
             </div>
         </div>
     </header>
+    <nav aria-label="breadcrumb">
+        <ol class="breadcrumb" style="padding:10px 0px 10px 120px">
+            <li class="breadcrumb-item active" aria-current="page">Home</li>
+            <li class="breadcrumb-item"><a href="./aboutus.html">About us</a></li>
+        </ol>
+    </nav>
 
     <div class="container">
-            <nav aria-label="breadcrumb">
-                    <ol class="breadcrumb">
-                      <li class="breadcrumb-item active" aria-current="page">Home</li>
-                      <li class="breadcrumb-item"><a href="./aboutus.html">About us</a></li>
-                    </ol>
-                  </nav>
+
         <div class="row flex-row-reverse row-content align-items-center">
             <div class="col-sm-4 col-md-3">
                 <h3>Our famous chocolates</h3>
             </div>
             <div class="col-sm col-md">
-                <h2>85% DARK CHOCOLATE</h2>
-                <p class="d-none d-md-block">Dark chocolate with no added sugar. Here you can taste the flavor of cocoa
-                    beans.</p>
+                <div class="media">
+                    <img src="/images/dark85.jpg" title="Dark Chocolate" alt="Dark Chocolate"
+                        class="mr-3 img-thumbnail">
+                    <div class="media-body">
+                        <h2>85% DARK CHOCOLATE</h2>
+                        <p class="d-none d-md-block">Dark chocolate with no added sugar. Here you can taste the flavor
+                            of cocoa beans.</p>
+                    </div>
+                </div>
             </div>
         </div>
+    </div>
 
-        <div class="row row-content align-items-center">
-            <div class="col-sm-4 col-md-3">
-                <h3>WEEK’S OFFER</h3>
-            </div>
-            <div class="col-sm-2 col-md-3">
-                <h2>Our basket</h2>
-                <p class="d-none d-md-block">This week we offer a basket with 10 delicious chocolates! </p>
-            </div>
-            <div class="col-sm-6 col-md-6">
-                <p class="d-none d-md-block">
-                    test
-                </p>
-            </div>
+    <div class="row row-content align-items-center">
+        <div class="col-sm-4 col-md-3">
+            <h3>WEEK’S OFFER</h3>
         </div>
+        <div class="col-sm-2 col-md-3">
+            <h2>Our basket</h2>
+            <p class="d-none d-md-block">This week we offer a basket with 10 delicious chocolates! </p>
+        </div>
+        <div class="col-sm-6 col-md-6">
+            <p class="d-none d-md-block">
+                test
+            </p>
+        </div>
+    </div>
 
-        <div class="row flex-row-reverse row-content align-items-center">
-            <div class="col-sm-4 col-md-3">
-                <h3>Meet our Specialists</h3>
-            </div>
-            <div class="col-sm col-md">
-                <h2>Vasilis Wilson </h2>
-                <h4>Sous-chef</h4>
-                <p>Vasilis is well informed of all the current trends in pastry and contributes his innovative ideas in
-                    our products.</p>
+    <div class="row flex-row-reverse row-content align-items-center">
+        <div class="col-sm-4 col-md-3">
+            <h3>Meet our Specialists</h3>
+        </div>
+        <div class="col-sm col-md">
+            <div class="media">
+                <img src="/images/cartoonVasilis.png" title="Vasilis" alt="Dark Chocolate" class="mr-3 img-thumbnail">
+                <div class="media-body">
+                    <h2>Vasilis Wilson </h2>
+                    <h4>Sous-chef</h4>
+                    <p>Vasilis is well informed of all the current trends in pastry and contributes his innovative ideas in our products.</p>
+                </div>
             </div>
         </div>
     </div>
@@ -110,25 +153,33 @@
                         121, Clear Wave Road<br>
                         Clear Wave Road, Aloha<br>
                         HAWAII<br>
-                        Tel.: +987 6543 2100<br>
-                        Fax: +987 6543 2101<br>
-                        Email: <a href="mailto:chocolat@nomail.net">chocolat@nomail.net</a>
+                        <i class="fa fa-phone fa-lg"></i> +987 6543 2100 <br>
+                        <i class="fa fa-fax fa-lg"></i> +987 6543 2101 <br>
+                        <i class="fa fa-envelope fa-lg"></i> <a href="mailto: chocolat@nomail.net">
+                            chocolat@nomail.net
+                        </a>
                     </address>
                 </div>
                 <div class="col col-sm-4 align-self-center">
                     <div style="text-align: center;">
-                        <a href="http://google.com/+">Google+</a>
-                        <a href="http://www.facebook.com/profile.php?id=">Facebook</a>
-                        <a href="http://www.linkedin.com/in/">LinkedIn</a>
-                        <a href="http://twitter.com/">Twitter</a>
-                        <a href="http://youtube.com/">YouTube</a>
-                        <a href="mailto:">Mail</a>
+                        <a class="btn btn-social-icon btn-google-plus" href="http://google.com/+">
+                            <i class="fa fa-google-plus"></i></a>
+                        <a class="btn btn-social-icon btn-facebook" href="http://www.facebook.com/profile.php?id=">
+                            <i class="fa fa-facebook"></i></a>
+                        <a class="btn btn-social-icon btn-linkedin" href="http://www.linkedin.com/in/">
+                            <i class="fa fa-linkedin"></i></a>
+                        <a class="btn btn-social-icon btn-twitter" href="http://twitter.com/">
+                            <i class="fa fa-twitter"></i></a>
+                        <a class="btn btn-social-icon btn-youtube" href="http://youtube.com/">
+                            <i class="fa fa-youtube"></i></a>
+                        <a class="btn btn-social-icon" href="mailto:">
+                            <i class="fa fa-envelope-o"></i></a>
                     </div>
                 </div>
             </div>
             <div class="row justify-content-center">
                 <div class="col-auto">
-                    <p> &copy; Copyright 2018 Le Chocolat</p>
+                    <p> &copy; <small>2020 Le Chocolat</small></p>
                 </div>
             </div>
         </div>
