--- a/index.html
+++ b/index.html
@@ -95,9 +95,8 @@
                     <img src="/images/dark85.jpg" title="Dark Chocolate" alt="Dark Chocolate"
                         class="mr-3 img-thumbnail">
                     <div class="media-body">
-                        <h2>85% DARK CHOCOLATE</h2>
-                        <p class="d-none d-md-block">Dark chocolate with no added sugar. Here you can taste the flavor
-                            of cocoa beans.</p>
+                        <h2>85% DARK CHOCOLATE<span class="badge badge-danger">HOT</span><span class="badge badge-pill badge-success">$0,99</span></h2>
+                        <p class="d-none d-md-block">Dark chocolate with no added sugar. Here you can taste the flavor of cocoa beans.</p>
                     </div>
                 </div>
             </div>
@@ -114,7 +113,6 @@
         </div>
         <div class="col-sm-6 col-md-6">
             <p class="d-none d-md-block">
-                test
             </p>
         </div>
     </div>
@@ -129,7 +127,7 @@
                 <div class="media-body">
                     <h2>Vasilis Wilson </h2>
                     <h4>Sous-chef</h4>
-                    <p>Vasilis is well informed of all the current trends in pastry and contributes his innovative ideas in our products.</p>
+                    <p class="d-none d-md-block">Vasilis is well informed of all the current trends in pastry and contributes his innovative ideas in our products.</p>
                 </div>
             </div>
         </div>
